Added button styling

--- a/code/stylesheet.css
+++ b/code/stylesheet.css
@@ -41,3 +41,20 @@ hr
 {
     border: 1px dotted #ccc;
 }
+
+button
+{
+  height: 50px;
+  background: purple;
+  border: none;
+  color: white;
+  font-size: 1.25em;
+  font-family: 'Nanum Gothic';
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover
+{
+  border: 2px solid black;
+}
